updates in home page

--- a/home.html
+++ b/home.html
@@ -6,12 +6,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Zekmos Frams</title>
     <!-- MDB icon -->
-    <link rel="php" href="send-email.php" type="Text/php"/>
     <link rel="shortcut icon" href="logo_icon.png" type="image"/>
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fhomeont-awesome/6.0.0/css/all.min.css"
     />
     <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="main_style.css">
@@ -58,9 +57,9 @@
         <img
           src="logo_icon.png"
           height="15"
-          alt="MDB Logo"
+          alt="Logo"
           loading="lazy"
-        />
+/>
       </a>
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -123,13 +122,13 @@
           aria-labelledby="navbarDropdownMenuLink"
         >
           <li>
-            <a class="dropdown-item" href="#">Quik tips</a>
+            <a class="dropdown-item disabled" href="#">Quik tips</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">News updates</a>
+            <a class="dropdown-item disabled" href="#">News updates</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Farm diary</a>
+            <a class="dropdown-item disabled" href="#">Farm diary</a>
           </li>
         </ul>
       </div>
@@ -156,13 +155,13 @@
           aria-labelledby="navbarDropdownMenuAvatar"
         >
           <li>
-            <a class="dropdown-item" href="#">Member Area</a>
+            <a class="dropdown-item disabled" href="#">Member Area</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Join</a>
+            <a class="dropdown-item disabled" href="#">Join</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Login</a>
+            <a class="dropdown-item disabled" href="#">Login</a>
           </li>
         </ul>
       </div>
@@ -235,7 +234,7 @@
       <div class="card-body">
           <p class="card-text"><span> Zekmos Farms</span> is a family-owned and operated poultry hatching business located in Ghana, precisely Tamale. We are specialize in breeding and hatching high-quality, healthy chicks and poultry from a variety of breeds for both commercial and backyard farmers.
 
-            Hatching Process We use state-of-the-art incubators and brooders to ensure optimal conditions for hatching and early chick development. Our eggs are carefully selected and stored under optimal conditions prior to incubation, and we monitor temperature, humidity, and other environmental factors closely throughout the incubation process. Once hatched, chicks are kept in a temperature-controlled brooder until they are ready to be sold.
+            We use state-of-the-art incubators and brooders to ensure optimal conditions for hatching and early chick development. Our eggs are carefully selected and stored under optimal conditions prior to incubation, and we monitor temperature, humidity, and other environmental factors closely throughout the incubation process. Once hatched, chicks are kept in a temperature-controlled brooder until they are ready to be sold.
             
             Breeds We offer a variety of chicken and turkey breeds, including:
             
