--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <link rel="icon" href="hen.jpg" type="image" />
     <title>ZekmosFarms</title>
     <!-- MDB icon -->
-    <link rel="icon" href="logo_icon.png" type="image" />
+   
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -33,7 +34,7 @@
             <a class="btn btn-secondary btn-lg btn1" href="home.html" role="button">Enter Home</a>              
             </div>
           </div>
-          <img src="https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe"/>
+          <img src="https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe" alt="tracker"/>
       <!-- Background image -->
     </div>  
     <!-- MDB -->
