--- a/home.html
+++ b/home.html
@@ -395,7 +395,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
   </div>
   <!-- Grid container -->
 <!-- Footer -->
-<footer class="text-center text-lg-start text-muted"id="home">
+<footer class="text-center text-lg-start text-light"id="home">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
@@ -450,19 +450,16 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Our Products
+            Our Products & Services
           </h6>
           <p>
-            <a href="#!" class="text-reset">Hatching of eggs</a>
+            <a href="#!" class="text-reset">Comercial and private Hatching</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Sale of Day-old keets</a>
+            <a href="#!" class="text-reset">Sale of Day-old keets chicks</a>
           </p>
-          <p>
-            <a href="#!" class="text-reset">Sale of Day-old chicks</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Sale of grown poultary of all types</a>
+           <p>
+            <a href="#!" class="text-reset">Sale of fully grown poultary of all types</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -477,10 +474,10 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
             <a href="#!" class="text-reset">Pricing</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="#!" class="text-reset">Order</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#contact" class="text-reset">Help</a>
           </p>
         </div>
         <!-- Grid column -->
