--- a/home.html
+++ b/home.html
@@ -406,7 +406,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
 
     <!-- Right -->
     <div>
-      <a href="" class="me-4 text-reset" title="facebook">
+      <a href="https://web.facebook.com/" class="me-4 text-reset" title="facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
       <a href="" class="me-4 text-reset"title="twitter">
@@ -415,7 +415,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
       <a href="" class="me-4 text-reset"title="google">
         <i class="fab fa-google"></i>
       </a>
-      <a href="" class="me-4 text-reset"title="instagram">
+      <a href="https://www.instagram.com/zekmosfarms8/" class="me-4 text-reset"title="instagram">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="" class="me-4 text-reset"title="linkedin">
@@ -437,7 +437,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="text-uppercase fw-bold mb-4 text-primary">
             <i class="fas fa-gem me-3"></i>Zekmos Farms Ghana
           </h6>
           <p>
@@ -449,7 +449,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="text-uppercase fw-bold mb-4 text-primary" >
             Our Products & Services
           </h6>
           <p>
@@ -467,7 +467,7 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="text-uppercase fw-bold mb-4 text-primary">
             Useful links
           </h6>
           <p>
@@ -485,14 +485,14 @@ Mission: The mission ofZekmos Frams is to provide customers with healthy, high-q
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <h6 class="text-uppercase fw-bold mb-4 text-primary">Contact</h6>
           <p><i class="fas fa-home me-3"></i> P.O.Box 16, Tamale, N/R. Ghana</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@zekmosframs.org
           </p>
           <p><i class="fas fa-phone me-3"></i> +233 208238880</p>
-          <p><i class="fas fa-globe me-3"></i> www.zekmosfarms.org</p>
+          <p><a href="https://zzekmosfarms.org"><i class="fas fa-globe me-3"></i> www.zekmosfarms.org</a></p>
         </div>
         <!-- Grid column -->
       </div>
