--- a/home.html
+++ b/home.html
@@ -277,15 +277,16 @@
     <div class="card-body">
       <h5 class="card-title">Our Service<hr></h5>
       <p class="card-text">
-        Egg incubation: Zekmos Farms will incubate fertilized eggs in a controlled environment to ensure optimal temperature, humidity, and ventilation to maximize hatching rates.
+        Zekmos Farms comercially incubate and hatch fertilized eggs od clients in a controlled environment to ensure optimal temperature, humidity, and ventilation to maximize hatching rates.
+        <small class="text-muted">We have a hatching rate of over 90%</small>
 
-Chick hatching: Once the eggs hatch, Zekmos farms will care for and nurture the chicks until they are strong enough to be sold.
+Once  eggs  are hatched, Zekmos farms care for and nurture the chicks until they are strong enough to be sold or start to lay their own eggs.
 
-Chick sales: Zekmos farms will sell the newly hatched chicks to customers, typically farmers or hobbyists looking to raise their own poultry.
+Zekmos farms sells newly hatched chicks to customers, typically farmers or hobbyists looking to raise their own poultry.
 
-Consultation: Some companies may also offer consulting services to help customers choose the right breeds of chickens, provide guidance on proper care and feeding, and answer any questions related to raising chickens.
+Some companies also offer consulting services to help customers choose the right breeds of chickens, provide guidance on proper care and feeding, and answer any questions related to raising chickens.
 
-Equipment sales: Zekmos farms may also sell equipment related to egg hatching and chick rearing, such as incubators, brooders, feeders, and waterers.
+Zekmos farms also sell equipment related to egg hatching and chick rearing, such as incubators, brooders, feeders, and waterers.
 
 Shipping: For customers who are not local, Zekmos farms may offer shipping services to deliver the chicks to their destination.
 
@@ -300,7 +301,7 @@ Overall, an egg hatching and selling chick farms provides a comprehensive set of
   <div class="card">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwJ4TjMlJ83M7SyF0FYq5daicrMwcAtQJSow&usqp=CAU" alt="birds"class="card-img-top img1">
     <div class="card-body">
-      <h5 class="card-title">Why do businss with Zekmos Farms<hr></h5>
+      <h5 class="card-title">Why do business with us?<hr></h5>
       <p class="card-text">High hatch rates: Zekmos farms uses advanced incubation techniques and carefully monitors environmental conditions to ensure a high hatch rate, which means customers are more likely to successfully hatch healthy chicks.
 
         Zekmos farms carefully selects quality breeding stock to ensure highest-quality eggs, which can lead to healthier and more productive chicks.
@@ -321,7 +322,7 @@ Overall, an egg hatching and selling chick farms provides a comprehensive set of
     <img src="logo_icon.png" class="card-img-top img" alt="birds"/>
     <div class="card-body">
       <h5 class="card-title">OBJECTIVES<hr></h5>
-      <p class="card-text">Zekmos farms aim to produce healthy and high-quality poultry by hatching eggs using state-of-the-art technology and best practices in the industry.
+      <p class="card-text">Zekmos farms aims to produce healthy and high-quality poultry by hatching eggs using state-of-the-art technology and best practices in the industry.
 Zekmos farms vision is to be recognized as a leading provider of premium poultry products, with a commitment to sustainability, animal welfare, productivity and customer satisfaction.
 
       </p>
