--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white ">
               <h1 class="mb-3 text-center front-title">Zekmos Farms</h1>
-              <h2 class="mb-6 text-center second-title">Looking to start a guinea fowl farm <span>? </span><br>You are in the right place</h2>
+              <h2 class="mb-6 text-center second-title">Looking to start your guinea fowl farm?<br>You are in the right place</h2>
               <h2 class="mb-6 text-center thired-title text-info"> <span class="moto">Hatch your dreams with us, Your trusted hatching partner</span></h2>
             <a class="btn btn-secondary btn-lg btn1" href="home.html" role="button">Enter Home</a>              
             </div>
