--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="icon" href="hen.jpg" type="image" />
-    <title>In The Blood Farms</title>
+    <title>Zekmos Hatchery and Farms</title>
     <!-- MDB icon -->
    
     <!-- Font Awesome -->
@@ -28,7 +28,7 @@
      <div class="index">    
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white ">
-              <h1 class="mb-3 text-center front-title">In the Blood Farms</h1>
+              <h1 class="mb-3 text-center front-title">Zekmos Hatchery and Farms</h1>
               <h2 class="mb-6 text-center second-title">Looking to start your guinea fowl farm?<br>You are in the right place</h2>
               <h2 class="mb-6 text-center thired-title text-info"> <span class="moto">Hatch your dreams with us, Your trusted hatching partner</span></h2>
             <a class="btn btn-secondary btn-lg btn1" href="home.html" role="button">Enter Home</a>              
