--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <h1 class="mb-3 text-center front-title">Zekmos Hatchery and Farms</h1>
               <h2 class="mb-6 text-center second-title">Looking to start your guinea fowl farm?<br>You are in the right place</h2>
               <h2 class="mb-6 text-center thired-title text-info"> <span class="moto">Hatch your dreams with us, Your trusted hatching partner</span></h2>
-            <div><a class="btn btn-secondary btn-lg btn1" href="home.html" role="button">Enter Home<i class="fa-arrow-right></i></a> </div>             
+            <div><a class="btn btn-secondary btn-lg btn1" href="home.html" role="button"><i class="fa-arrow-right>Go to Home</i></a> </div>             
             </div>
           </div>
           <img src="https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe" alt="tracker"/>
