--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
     <!-- Right elements -->
     <div class="d-flex align-items-center">
       <!-- Icon -->
-      <div class="text-reset me-3" href="#"><span class="social">Folow us <i class="fa fa-arrow-right"> </i> </span>
+      <div class="text-reset me-3" href="#"><span class="social">Folow us</span>
         
        
         <a class="btn  fa-brands" href="#!" title="youtube">
