--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="index.php"></script>
     <!-- Custom scripts -->
+    <script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"1a9a0238939654d04fe4bf7a5677c9fe"})});</script>
     <script type="text/javascript"></script>
   </body>
 </html>
