--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white ">
               <h1 class="mb-3 text-center front-title">Zekmos Hatchery and Farms</h1>
-              <h2 class="mb-6 text-center second-title">Looking to start your guinea fowl farm?<br>You are in the right place</h2>
+              <!-- <h2 class="mb-6 text-center second-title">Looking to start your guinea fowl farm?<br>You are in the right place</h2> -->
               <h2 class="mb-6 text-center thired-title text-info"> <span class="moto">Hatch your dreams with us, Your trusted hatching partner</span></h2>
-            <div><a class="btn btn-primary btn-lg btn1" style="font-size:2rem; border-radius: 12px;padding:10px;" href="home.html" role="button">Home</a> </div>   
+            <div><a class="btn btn-primary btn-lg btn1" style="font-size:2rem; border-radius: 12px;padding:10px;" href="home.html" role="button">Go to Zekmos Farm</a> </div>   
               <div><a class="btn btn-primary btn-lg btn1" style="text-align:center; margin:12px 60px;font-size:2rem;font-family:sans serif; border-radius: 12px;" href="hatchapp.great-site.net" role="button">Go to Zekmos Hatchery</a> </div>
             </div>
           </div>
