--- a/home.html
+++ b/home.html
@@ -23,6 +23,19 @@
     <link rel="stylesheet" href="https://ai.deepbrain.io/pc/642d31cf68ecd3253a401331" />
     <link rel="stylesheet" href="https://ai.deepbrain.io/mobile/642d31cf68ecd3253a401331" />
     <link rel="stylesheet" href="https://ai.deepbrain.io/kiosk/642d31cf68ecd3253a40133" />
+    <style>
+      /* Footer Styles */
+footer {
+    background-color: #343a40;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
+
+footer p {
+    font-size: 14px;
+}
+    </style>
     
   </head>
   <body>
@@ -515,10 +528,16 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2022 Copyright:
-    <a class="text-reset fw-bold" href="https:/zekmosfarms.org/">Zekmos Hatchery and Farms</a>
-  </div>
+  
+    <footer>
+      <div class="container">
+          <p>&copy; 2024 Zekmos Hatchery and Farms. All rights reserved.</p>
+          <a class="text-reset fw-bold" href="https:/zekmosfarms.org/">Zekmos Hatchery and Farms</a>
+      </div>
+  
+  </footer>
+    
+
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
