--- a/home.html
+++ b/home.html
@@ -382,7 +382,7 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
           <!--Grid column-->
           <div class="col-auto">
             <p class="pt-2">
-              <strong>Sign up for our newsletter</strong>
+              <strong>Sign up for our weekly farm tips</strong>
             </p>
           </div>
           <!--Grid column-->
@@ -516,7 +516,7 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
           <p><i class="fas fa-phone me-3"></i> +233 208238880</p>
           <p><a href="https://zekmosfarms.org"><i class="fas fa-globe me-3"></i> www.zekmosfarms.org</a></p>
         </div>
-        <!-- Grid column --
+        <!-- Grid column -->
       </div>
       <!--Grid row -->
     </div>
@@ -532,7 +532,7 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
     <footer>
       <div class="container">
           <p>&copy; 2024 Zekmos Hatchery and Farms. All rights reserved.</p>
-          <a class="text-reset fw-bold" href="https:/zekmosfarms.org/">Zekmos Hatchery and Farms</a>
+         
       </div>
   
   </footer>
