--- a/home.html
+++ b/home.html
@@ -227,13 +227,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">CONTACT US</a>
               </li>
-              <a href="https/hatchapp.great-site.net"class="btn btn-secondary">Go to hachery</a>
+              <a href="#https/hatchapp.great-site.net"class="btn btn-secondary">Go to hachery</a>
             </ul>
             <div class="d-flex align-items-center">
               <span class="social me-3">Follow us</span>
               <div class="social-icons">
-                <a href="#!" class="fab fa-youtube" title="YouTube"></a>
-                <a href="#!" class="fab fa-linkedin-in" title="LinkedIn"></a>
+                <a href="YouTube.com/zekmosfarms" class="fab fa-youtube" title="YouTube"></a>
+                <a href="linkedin.com/zekmosfarms" class="fab fa-linkedin-in" title="LinkedIn"></a>
                 <a href="facebook.com/zekmosfarms" class="fab fa-facebook-f" title="Facebook"></a>
                 <a href="#!" class="fab fa-instagram" title="Instagram"></a>
                 <a href="#!" class="fab fa-twitter" title="Twitter"></a>
@@ -244,9 +244,9 @@
                   <span class="badge rounded-pill badge-notification bg-danger">3</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item disabled" href="https/hatchapp.great-site.net">News updates</a></li>
-                  <li><a class="dropdown-item disabled" href="https/hatchapp.great-site.net">Quick Tips</a></li>
-                  <li><a class="dropdown-item disabled" href="https/hatchapp.great-site.net">Farm diary</a></li>
+                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">News updates</a></li>
+                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">Quick Tips</a></li>
+                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">Farm diary</a></li>
                 </ul>
               </div>
               <div class="dropdown ms-3">
@@ -254,9 +254,9 @@
                   <img src="logo_icon.png" class="rounded-circle" height="25" alt="Profile Picture" loading="lazy" />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                  <li><a class="dropdown-item disabled" href="https/hatchapp.great-site.net/login.php">Member Area</a></li>
-                  <li><a class="dropdown-item disabled" href="#">Join</a></li>
-                  <li><a class="dropdown-item disabled" href="https/hatchapp.great-site.net/login.php">Login</a></li>
+                  <li><a class="dropdown-item " href="https/hatchapp.great-site.net/login.php">Member Area</a></li>
+                  <li><a class="dropdown-item " href="#">Join</a></li>
+                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net/login.php">Login</a></li>
                 </ul>
               </div>
             </div>
@@ -503,7 +503,7 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
 
     <!-- Right -->
     <div>
-      <a href="https://web.facebook.com/" class="me-4 text-reset" title="facebook">
+      <a href="https://web.facebook.com/zekmosfarms" class="me-4 text-reset" title="facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
       <a href="" class="me-4 text-reset"title="twitter">
@@ -550,7 +550,7 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
             Our Products & Services
           </h6>
           <p>
-            <a href="#!" class="text-reset">Comercial and private Hatching</a>
+            <a href="https://zekmosfarms.org" class="text-reset">Comercial and private Hatching</a>
           </p>
           <p>
             <a href="#!" class="text-reset">Sale of Day-old keets chicks</a>
