--- a/home.html
+++ b/home.html
@@ -227,13 +227,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">CONTACT US</a>
               </li>
-              <a url="hatchapp.great-site.net"class="link btn-secondary">Go to hachery</a>
+              <a url="https://hatchapp.great-site.net"class="link btn-secondary">Go to hachery</a>
             </ul>
             <div class="d-flex align-items-center">
               <span class="social me-3">Follow us</span>
               <div class="social-icons">
-                <a href="YouTube.com/zekmosfarms" class="fab fa-youtube" title="YouTube"></a>
-                <a href="linkedin.com/zekmosfarms" class="fab fa-linkedin-in" title="LinkedIn"></a>
+                <a href="https://YouTube.com/zekmosfarms" class="fab fa-youtube" title="YouTube"></a>
+                <a href="https://linkedin.com/zekmosfarms" class="fab fa-linkedin-in" title="LinkedIn"></a>
                 <a href="facebook.com/zekmosfarms" class="fab fa-facebook-f" title="Facebook"></a>
                 <a href="#!" class="fab fa-instagram" title="Instagram"></a>
                 <a href="#!" class="fab fa-twitter" title="Twitter"></a>
