--- a/home.html
+++ b/home.html
@@ -234,7 +234,7 @@
               <div class="social-icons">
                 <a href="https://YouTube.com/zekmosfarms" class="fab fa-youtube" title="YouTube"></a>
                 <a href="https://linkedin.com/zekmosfarms" class="fab fa-linkedin-in" title="LinkedIn"></a>
-                <a href="facebook.com/zekmosfarms" class="fab fa-facebook-f" title="Facebook"></a>
+                <a href="https://facebook.com/zekmosfarms" class="fab fa-facebook-f" title="Facebook"></a>
                 <a href="#!" class="fab fa-instagram" title="Instagram"></a>
                 <a href="#!" class="fab fa-twitter" title="Twitter"></a>
               </div>
@@ -244,9 +244,9 @@
                   <span class="badge rounded-pill badge-notification bg-danger">3</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">News updates</a></li>
-                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">Quick Tips</a></li>
-                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net">Farm diary</a></li>
+                  <li><a class="dropdown-item" href="https://hatchapp.great-site.net">News updates</a></li>
+                  <li><a class="dropdown-item" href="https://hatchapp.great-site.net">Quick Tips</a></li>
+                  <li><a class="dropdown-item" href="https://hatchapp.great-site.net">Farm diary</a></li>
                 </ul>
               </div>
               <div class="dropdown ms-3">
@@ -254,9 +254,9 @@
                   <img src="logo_icon.png" class="rounded-circle" height="25" alt="Profile Picture" loading="lazy" />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                  <li><a class="dropdown-item " href="https/hatchapp.great-site.net/login.php">Member Area</a></li>
+                  <li><a class="dropdown-item " href="https://hatchapp.great-site.net/login.php">Member Area</a></li>
                   <li><a class="dropdown-item " href="#">Join</a></li>
-                  <li><a class="dropdown-item" href="https/hatchapp.great-site.net/login.php">Login</a></li>
+                  <li><a class="dropdown-item" href="https://hatchapp.great-site.net/login.php">Login</a></li>
                 </ul>
               </div>
             </div>
@@ -468,8 +468,8 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
           <div class="col-md-5 col-12">
             <!-- Email input -->
              
-              <input type="email"name="email" id="form5Example29" class="form-control" />
-              <label class="form-label" for="form">Email address</label>
+              <input type="email"name="email" id="form5Example29" class="form-control" placeholder="Email address"/>
+              <label class="form-label" for="form"></label>
               <label for="subject"  class="hidden-title" title="Subscription"></label>
            
           </div>
@@ -515,10 +515,10 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
       <a href="https://www.instagram.com/zekmosfarms8/" class="me-4 text-reset"title="instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="" class="me-4 text-reset"title="linkedin">
+      <a href="https://linkedin.com/zekmosfarms" class="me-4 text-reset"title="linkedin">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="" class="me-4 text-reset"title="Github">
+      <a href="https://Github.com/zekmoscodehub" class="me-4 text-reset"title="Github">
         <i class="fab fa-github"></i>
       </a>
     </div>
