--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">CONTACT US</a>
               </li>
-              <a url="https://hatchapp.great-site.net"class=" link">Go to hachery</a>
+              <a href="https://hatchapp.great-site.net"class=" btn btn-secondary">Go to hachery</a>
             </ul>
             <div class="d-flex align-items-center">
               <span class="social me-3">Follow us</span>
