--- a/home.html
+++ b/home.html
@@ -14,154 +14,179 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
     <!-- Custom Styles -->
     <style>
-      body, html {
-         height: 100%;
-         margin: 0;
-         font-family: 'Roboto', sans-serif;
-         max-width: 1200px;
-      }
-      .title {
-         text-align: center;
-         font-size: 2.5em;
-         color: #0056b3;
-         margin-bottom: 20px;
-      }
-      .p-msg {
-         margin-bottom: 20px;
-      }
-      .section-title {
-         font-size: 1.5em;
-         color: #0056b3;
-         margin-bottom: 10px;
-      }
-      .btn {
-         display: inline-block;
-         padding: 10px 20px;
-         margin: 10px 0;
-         color: #fff;
-         background-color: #007bff;
-         border: none;
-         border-radius: 5px;
-         cursor: pointer;
-         text-decoration: none;
-         text-align: center;
-      }
-      .btn:hover {
-         background-color: #0056b3;
-      }
-      .interactive {
-         margin-top: 20px;
-         padding: 20px;
-         background-color: #e9ecef;
-         border-radius: 8px;
-      }
-      .bg-image {
-         background: url('https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe') no-repeat center center fixed;
-         background-size: cover;
-         height: 250px;
-         position: relative;
-      }
-      .navbar {
-         background-color: rgba(255, 255, 255, 0.9);
-      }
-      .navbar-brand img {
-         height: 25px;
-      }
-      .social-icons a {
-         color: #333;
-         margin: 0 5px;
-         transition: color 0.3s;
-      }
-      .social-icons a:hover {
-         color: #007bff;
-      }
-      .glass {
-         background: rgba(255, 255, 255, 0.2);
-         border-radius: 16px;
-         padding: 20px;
-         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-         backdrop-filter: blur(10px);
-         -webkit-backdrop-filter: blur(10px);
-         text-align: center;
-         color: white;
-      }
-      .glass h1, .glass h2 {
-         margin-bottom: 20px;
-      }
-      .glass .btn {
-         font-size: 1.5rem;
-         border-radius: 12px;
-         margin: 10px;
-         padding: 15px 30px;
-      }
-      .glass .btn1 {
-         display: block;
-         margin: 10px auto;
-      }
-      .logo {
-         border-radius: 50%;
-         min-width: 40px;
-      }
+   body, html {
+      height: 100%;
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      max-width: 1200px;
+   }
+   .title {
+      text-align: center;
+      font-size: 2.5em;
+      color: #0056b3;
+      margin-bottom: 20px;
+   }
+   .img{
+    width: 200px;
+    margin:10px 400px;
+   }
+   .p-msg {
+      margin-bottom: 20px;
+   }
+   .section-title {
+      font-size: 1.5em;
+      color: #0056b3;
+      margin-bottom: 10px;
+   }
+   .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 10px 0;
+      color: #fff;
+      background-color: #007bff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+      text-align: center;
+   }
+   .btn:hover {
+      background-color: #0056b3;
+   }
+   .interactive {
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #e9ecef;
+      border-radius: 8px;
+   }
+   .bg-image {
+      background: url('https://tracker.metricool.com/c3po.jpg?hash=1a9a0238939654d04fe4bf7a5677c9fe') no-repeat center center fixed;
+      background-size: cover;
+      height: 250px;
+      position: relative;
+   }
+   .navbar {
+      background-color: rgba(255, 255, 255, 0.9);
+   }
+   .navbar-brand img {
+      height: 25px;
+   }
+   .social-icons a {
+      color: #333;
+      margin: 0 5px;
+      transition: color 0.3s;
+   }
+   .social-icons a:hover {
+      color: #007bff;
+   }
+   .glass {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      text-align: center;
+      color: white;
+   }
+   .glass h1, .glass h2 {
+      margin-bottom: 20px;
+   }
+   .result {
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #e9ecef;
+            border-radius: 8px;
+        }
+        .section-title {
+            font-size: 1.5em;
+            color: #0056b3;
+            margin-bottom: 10px;
+        }
+        .form-container {
+            padding: 20px;
+            background-color: #e9ecef;
+            border-radius: 8px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+   .glass .btn {
+      font-size: 1.5rem;
+      border-radius: 12px;
+      margin: 10px;
+      padding: 15px 30px;
+   }
+   .glass .btn1 {
+      display: block;
+      margin: 10px auto;
+   }
+   .logo {
+      border-radius: 50%;
+      min-width: 40px;
+   }
+   .carousel-item img {
+      border-radius: 40%;
+      max-width: 400px;
+   }
+   .card-group {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+   }
+   .card img {
+      height: 200px;
+      object-fit: cover;
+      text-align: center;
+   }
+   .form-outline {
+      margin-bottom: 20px;
+   }
+   .contact {
+      padding: 50px;
+   }
+   .title h1 {
+      text-align: center;
+      margin-top: 40px;
+   }
+   .img1{width:200px;
+    margin:10px 400px;
+  }
+   footer {
+      padding: 40px 0;
+      background-color: #333;
+      color: white;
+   }
+   footer a {
+      color: white;
+      text-decoration: none;
+   }
+   footer a:hover {
+      text-decoration: underline;
+   }
+   .social {
+      font-weight: bold;
+   }
+   @media (max-width: 768px) {
       .carousel-item img {
-         border-radius: 40%;
-         max-width: 400px;
+         height: 150px;
       }
-      .card-group {
-         display: flex;
-         flex-wrap: wrap;
-         justify-content: space-around;
+      .card {
+         object-fit: cover;
+         margin: 2px auto;
+         text-align: center;
       }
       .card img {
-         height: 200px;
-         object-fit: cover;
-         text-align: center;
+         height: 150px;
       }
-      .form-outline {
-         margin-bottom: 20px;
-      }
-      .contact {
-         padding: 50px;
-      }
-      .title h1 {
-         text-align: center;
-         margin-top: 40px;
-      }
-      footer {
-         padding: 40px 0;
-         background-color: #333;
-         color: white;
-      }
-      footer a {
-         color: white;
-         text-decoration: none;
-      }
-      footer a:hover {
-         text-decoration: underline;
-      }
-      .social {
-         font-weight: bold;
-      }
-      @media (max-width: 768px) {
-         .carousel-item img {
-            height: 150px;
-         }
-         .card {
-            object-fit: cover;
-            margin: 2px auto;
-            text-align: center;
-         }
-         .card img {
-            height: 150px;
-         }
-      }
-      .bars {
-         max-width: 30px;
-      }
-      .bars:hover {
-         padding: 2px;
-      }
-   </style>
-     </head>
+   }
+   .bars {
+      max-width: 30px;
+   }
+   .bars:hover {
+      padding: 2px;
+   }
+</style>
+  </head>
   <body>
     <header>
       <div class="p-5 text-center bg-image">
@@ -440,7 +465,7 @@ We also offer comprehensive set of services to help customers start their own ch
 
 </div>
 <div class="card">
-  <img src="" alt="birds"class="card-img-top img1">
+  <img src="img/7.jpeg"  alt="birds"class="card-img-top img1">
   <div class="card-body">
     <h5 class="card-title">Why do business with us?<hr></h5>
     <p class="card-text">High hatch rates: Zekmos Hatchery and Farms uses advanced incubation techniques and carefully monitors environmental conditions to ensure a high hatch rate, which means customers are more likely to successfully hatch healthy chicks.
@@ -605,7 +630,58 @@ Zekmos Hatchery and Farms vision is to be recognized as a leading provider of pr
 <button type="submit" class="btn btn-primary">Send</button>
 
 </form>    
+<div class="form-container">
+  <div class="section-title">Poultry Lockdown Calculator</div>
+  <form id="poultryForm">
+      <div class="form-outline">
+          <label for="date">Select Date:</label>
+          <input type="date" id="date" name="date" required>
+      </div>
+      <div class="form-outline">
+          <label for="poultryType">Select Poultry Type:</label>
+          <select id="poultryType" name="poultryType" required>
+              <option value="">Select</option>
+              <option value="turkey">Turkey</option>
+              <option value="duck">Duck</option>
+              <option value="guineaFowl">Guinea Fowl</option>
+              <option value="fowl">Fowl</option>
+          </select>
+      </div>
+      <button type="button" class="btn" onclick="calculateLockdown()">Calculate Lockdown Date</button>
+  </form>
+  <div class="result" id="result"></div>
+</div>
+<br>
 
+<script>
+  function calculateLockdown() {
+      const dateInput = document.getElementById('date').value;
+      const poultryType = document.getElementById('poultryType').value;
+      const resultDiv = document.getElementById('result');
+
+      if (!dateInput || !poultryType) {
+          resultDiv.innerHTML = "Please select both date and poultry type.";
+          return;
+      }
+
+      const date = new Date(dateInput);
+      let daysToAdd = 0;
+
+      if (poultryType === 'fowl') {
+          daysToAdd = 18;
+      } else {
+          daysToAdd = 25;
+      }
+
+      const lockdownDate = new Date(date);
+      lockdownDate.setDate(lockdownDate.getDate() + daysToAdd);
+
+      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+      const formattedLockdownDate = lockdownDate.toLocaleDateString(undefined, options);
+
+      resultDiv.innerHTML = `The lockdown date for your selected date is: <strong>${formattedLockdownDate}</strong>`;
+  }
+</script>
 <footer class="bg-dark text-center text-white"id="contact">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
