--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
    }
    .img{
     width: 200px;
-    margin:10px 400px;
+    margin:10px auto;
    }
    .p-msg {
       margin-bottom: 20px;
@@ -150,7 +150,7 @@
       margin-top: 40px;
    }
    .img1{width:200px;
-    margin:10px 400px;
+    margin:10px auto;
   }
    footer {
       padding: 40px 0;
