--- a/home.html
+++ b/home.html
@@ -218,7 +218,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">CONTACT US</a>
               </li>
-              <a href="https://hatchapp.great-site.net"class=" btn btn-secondary" style="margin:10px 30px;">Start hatching Today!</a>
+              <a href="https://hatchapp.great-site.net"class=" btn btn-secondary" style="margin:10px 30px;">Go into hatching Today!</a>
             </ul>
             <div class="d-flex align-items-center">
               <span class="social me-3">Follow us</span>
